--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           context: foosball/
           push: true
-          tags: Jacklin17/is436:${{github.run_number}}
+          tags: jacklin17/is436:${{github.run_number}}
